syntax = "proto3";

option csharp_namespace = "DLTest";

package dl_test;

service DLTest {
	rpc GetDLFiles (GetDLRequest) returns (GetDLResponse);
}

message GetDLRequest {
	int64 id = 1;
}

message GetDLResponse {
	File file = 1;
	message File {
		AppPackageBinary app_package_binary = 1;
		repeated Chunk chunks = 2;
	}
}

message AppPackageBinary {
	string name = 1;
	int64 size_bytes = 2;
	string public_url = 3;
	bytes sha256 = 4;
}

message Chunk {
	int64 sequence = 1;
	int64 size_bytes = 2;
	string public_url = 3;
	bytes sha256 = 4;
}
